<?xml version="1.0" encoding="utf-8"?>
<!-- Design Layout of Manage/Delete Complaints Page -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manageComplaints">
    <!-- Textview to display to Delete Complaint page heading -->
    <TextView
        android:id="@+id/managehead"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:text="@string/delete_complaints"
        android:textAlignment="center"
        android:textColor="@color/MediumVioletRed"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
    <!-- Setting tableview for design aesthetics, having two drop down menus to choose floor and gender -->
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="399dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="161dp"
                android:layout_height="49dp"
                android:text="@string/floor" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="217dp"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="59dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="170dp"
                android:layout_height="48dp"
                android:text="@string/gender" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="219dp"
                android:layout_height="match_parent" />
        </TableRow>

    </TableLayout>
    <!-- Button to delete required complaints -->
    <Button
        android:id="@+id/delcomp"
        android:layout_width="206dp"
        android:layout_height="54dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768" />
</androidx.constraintlayout.widget.ConstraintLayout>