<?xml version="1.0" encoding="utf-8"?>
<!-- Design Layout of View Complaint Page -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewComplaints">
    <!-- Scroll view containing text box that displays all existing complaints -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="10dp"
        android:scrollbarThumbVertical="@drawable/custom_scroll_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Comphead"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/complaints"
                android:textAlignment="center"
                android:textColor="@color/DeepPink"
                android:textSize="40sp"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/fetchcomp"
                android:layout_width="match_parent"
                android:layout_height="914dp"
                android:text="@string/complaints_displayed_here"
                android:textSize="20sp" />
            <!-- Button to redirect to delete complaints page -->
            <Button
                android:id="@+id/deletecomp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/MediumVioletRed"
                android:text="@string/manage_complaints"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>